@@ -1,3 +1,7 @@
+2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-mouse-properties.c: s/PACKAGE/GETTEXT_PACKAGE/g
+	
 Tue Feb 19 23:52:17 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-mouse-properties.c (cursor_font_changed): Hook up cursor code.
